* (bug 13466) White space differences not shown in diffs

--- a/skins/common/diff.css
+++ b/skins/common/diff.css
@@ -34,6 +34,9 @@ td.diff-context {
 	font-weight: bold;
 	text-decoration: none;
 }
+.diffchange-inline {
+	border: 1px dotted red;
+}
 
 table.diff {
 	border: none;
